--- a/src/meta_sl/load_dataset/load_sinusoid.ipynb
+++ b/src/meta_sl/load_dataset/load_sinusoid.ipynb
@@ -1,197 +1,126 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "name": "load_sinusoid.ipynb",
-   "provenance": [],
-   "collapsed_sections": [],
-   "authorship_tag": "ABX9TyOXJpAoFEiyxJoLk7Kvuo+9"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {
-    "id": "5ZD7g-49_nQR",
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "status": "ok",
-     "timestamp": 1642245214108,
-     "user_tz": -540,
-     "elapsed": 3769,
-     "user": {
-      "displayName": "Luna Jang",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GiBq_mQ3pvg1aATbjbemG_YdHPPMMsRmQcVaghkug=s64",
-      "userId": "06164029183671863730"
-     }
-    },
-    "outputId": "6120ca83-1d9e-4902-b276-a5657916e836"
-   },
-   "source": [
-    "! pip install torchmeta"
-   ],
    "execution_count": null,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Requirement already satisfied: torchmeta in /usr/local/lib/python3.7/dist-packages (1.8.0)\n",
-      "Requirement already satisfied: tqdm>=4.0.0 in /usr/local/lib/python3.7/dist-packages (from torchmeta) (4.62.3)\n",
-      "Requirement already satisfied: torch<1.10.0,>=1.4.0 in /usr/local/lib/python3.7/dist-packages (from torchmeta) (1.9.1)\n",
-      "Requirement already satisfied: h5py in /usr/local/lib/python3.7/dist-packages (from torchmeta) (3.1.0)\n",
-      "Requirement already satisfied: Pillow>=7.0.0 in /usr/local/lib/python3.7/dist-packages (from torchmeta) (7.1.2)\n",
-      "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from torchmeta) (2.23.0)\n",
-      "Requirement already satisfied: numpy>=1.14.0 in /usr/local/lib/python3.7/dist-packages (from torchmeta) (1.19.5)\n",
-      "Requirement already satisfied: ordered-set in /usr/local/lib/python3.7/dist-packages (from torchmeta) (4.0.2)\n",
-      "Requirement already satisfied: torchvision<0.11.0,>=0.5.0 in /usr/local/lib/python3.7/dist-packages (from torchmeta) (0.10.1)\n",
-      "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from torch<1.10.0,>=1.4.0->torchmeta) (3.10.0.2)\n",
-      "Requirement already satisfied: cached-property in /usr/local/lib/python3.7/dist-packages (from h5py->torchmeta) (1.5.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->torchmeta) (2021.10.8)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->torchmeta) (3.0.4)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->torchmeta) (2.10)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->torchmeta) (1.24.3)\n"
-     ]
-    }
+   "metadata": {
+    "id": "11Q_LS3GAYUe"
+   },
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "from typing import Any, Dict\n",
+    "\n",
+    "import torch\n",
+    "from torchmeta.toy import Sinusoid\n",
+    "from torchmeta.utils.data import BatchMetaDataLoader\n",
+    "\n",
+    "warnings.filterwarnings(action=\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "id": "11Q_LS3GAYUe"
-   },
-   "source": [
-    "import easydict\n",
-    "import matplotlib.pyplot as plt\n",
-    "import torch\n",
-    "from torchmeta.toy import Sinusoid\n",
-    "from torchmeta.utils.data import BatchMetaDataLoader"
-   ],
    "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
    "metadata": {
     "id": "SGiFUDo4AYXb"
    },
+   "outputs": [],
    "source": [
-    "def get_dataloader(args):\n",
+    "def get_dataloader(config: Dict[str, Any]):\n",
     "    train_dataset = Sinusoid(\n",
-    "        num_samples_per_task=args.num_shots * 2,\n",
-    "        num_tasks=args.num_batches_train * args.batch_size,\n",
+    "        num_samples_per_task=config.num_shots * 2,\n",
+    "        num_tasks=config.num_batches_train * config.batch_size,\n",
     "        noise_std=None,\n",
     "    )\n",
-    "    train_dataloader = BatchMetaDataLoader(train_dataset, batch_size=args.batch_size)\n",
-    "\n",
-    "    test_dataset = Sinusoid(\n",
-    "        num_samples_per_task=args.num_shots * 2,\n",
-    "        num_tasks=args.num_batches_test * args.batch_size,\n",
-    "        noise_std=None,\n",
-    "    )\n",
-    "    test_dataloader = BatchMetaDataLoader(test_dataset, batch_size=args.batch_size)\n",
+    "    train_dataloader = BatchMetaDataLoader(train_dataset, batch_size=config.batch_size)\n",
     "\n",
     "    val_dataset = Sinusoid(\n",
-    "        num_samples_per_task=args.num_shots * 2,\n",
-    "        num_tasks=args.num_batches_val * args.batch_size,\n",
+    "        num_samples_per_task=config.num_shots * 2,\n",
+    "        num_tasks=config.num_batches_val * config.batch_size,\n",
     "        noise_std=None,\n",
     "    )\n",
-    "    val_dataloader = BatchMetaDataLoader(val_dataset, batch_size=args.batch_size)\n",
+    "    val_dataloader = BatchMetaDataLoader(val_dataset, batch_size=config.batch_size)\n",
     "\n",
-    "    return train_dataloader, test_dataloader, val_dataloader"
-   ],
-   "execution_count": null,
-   "outputs": []
+    "    test_dataset = Sinusoid(\n",
+    "        num_samples_per_task=config.num_shots * 2,\n",
+    "        num_tasks=config.num_batches_test * config.batch_size,\n",
+    "        noise_std=None,\n",
+    "    )\n",
+    "    test_dataloader = BatchMetaDataLoader(test_dataset, batch_size=config.batch_size)\n",
+    "\n",
+    "    return train_dataloader, val_dataloader, test_dataloader"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "OVVdyOxrAYbJ"
    },
+   "outputs": [],
    "source": [
-    "import warnings\n",
+    "config = {\n",
+    "    \"num_shots\": 5,\n",
+    "    \"batch_size\": 3,\n",
+    "    \"num_batches_train\": 6000,\n",
+    "    \"num_batches_test\": 2000,\n",
+    "    \"num_batches_val\": 100,\n",
+    "    \"device\": \"cpu\",  # \"cuda\" or \"cpu\"\n",
+    "}\n",
     "\n",
-    "warnings.filterwarnings(action=\"ignore\")\n",
-    "\n",
-    "args = easydict.EasyDict(\n",
-    "    {\n",
-    "        \"num_shots\": 5,\n",
-    "        \"batch_size\": 3,\n",
-    "        \"num_batches_train\": 6000,\n",
-    "        \"num_batches_test\": 2000,\n",
-    "        \"num_batches_val\": 100,\n",
-    "        \"device\": \"cpu\",\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "train_dataloader, test_dataloader, val_dataloader = get_dataloader(args)"
-   ],
-   "execution_count": null,
-   "outputs": []
+    "train_dataloader, val_dataloader, test_dataloader = get_dataloader(config)"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "ZJ18XoSpApSP"
    },
+   "outputs": [],
    "source": [
     "for batch_idx, batch in enumerate(val_dataloader):\n",
     "    xs, ys = batch\n",
-    "    support_xs = xs[:, : args.num_shots, :].to(device=args.device).type(torch.float)\n",
-    "    query_xs = xs[:, args.num_shots :, :].to(device=args.device).type(torch.float)\n",
-    "    support_ys = ys[:, : args.num_shots, :].to(device=args.device).type(torch.float)\n",
-    "    query_ys = ys[:, args.num_shots :, :].to(device=args.device).type(torch.float)\n",
+    "    support_xs = xs[:, : config.num_shots, :].to(device=config.device).type(torch.float)\n",
+    "    query_xs = xs[:, config.num_shots :, :].to(device=config.device).type(torch.float)\n",
+    "    support_ys = ys[:, : config.num_shots, :].to(device=config.device).type(torch.float)\n",
+    "    query_ys = ys[:, config.num_shots :, :].to(device=config.device).type(torch.float)\n",
     "\n",
-    "    print(\"support_x shape :\", support_xs.shape)\n",
-    "    print(\"support_y shape :\", support_ys.shape)\n",
-    "    print(\"query_x shape   :\", query_xs.shape)\n",
-    "    print(\"query_y shape   :\", query_ys.shape)\n",
+    "    print(\n",
+    "        f\"support_x shape :\",\n",
+    "        {support_xs.shape},\n",
+    "        f\"support_y shape :\",\n",
+    "        {support_ys.shape},\n",
+    "        f\"query_x shape   :\",\n",
+    "        {query_xs.shape},\n",
+    "        f\"query_y shape   :\",\n",
+    "        {query_ys.shape},\n",
+    "    )\n",
     "\n",
     "    break"
-   ],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "\"\"\"\n",
-    "for b in range(args.batch_size):\n",
-    "    fig = plt.figure(constrained_layout=True, figsize = (18, 4))\n",
-    "    subfigs = fig.subfigures(1, 2, wspace = 0.07)\n",
-    "\n",
-    "    subfigs[0].set_facecolor('0.75')\n",
-    "    subfigs[0].suptitle('Support set', fontsize='x-large')\n",
-    "    support_axs = subfigs.flat[0].subplots(nrows = 2, ncols = 5)\n",
-    "    for i, ax in enumerate(support_axs.T.flatten()):\n",
-    "        ax.imshow(support_x[b][i].permute(1, 2, 0).squeeze(), aspect=\"auto\")\n",
-    "\n",
-    "    subfigs[1].set_facecolor('0.75')\n",
-    "    subfigs[1].suptitle('Query set', fontsize='x-large')\n",
-    "    query_axes = subfigs.flat[1].subplots(nrows = 2, ncols = 5)\n",
-    "    for i, ax in enumerate(query_axes.T.flatten()):\n",
-    "        ax.imshow(query_x[b][i].permute(1, 2, 0).squeeze(), aspect=\"auto\")\n",
-    "    \n",
-    "    fig.suptitle('Batch '+str(b), fontsize = 'xx-large')\n",
-    "\n",
-    "    plt.show()\n",
-    "\"\"\""
-   ],
-   "metadata": {
-    "id": "wNLtZjKTK5EK"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyOXJpAoFEiyxJoLk7Kvuo+9",
+   "collapsed_sections": [],
+   "name": "load_sinusoid.ipynb",
+   "provenance": []
+  },
+  "interpreter": {
+   "hash": "1e00701f8c0a829a96ff452fb5277f0ece3f4e07662fe9989dbbafc0d5cb5571"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.8 64-bit ('rl')",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.8.8"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
