--- a/src/meta_sl/load_dataset/load_omniglot.ipynb
+++ b/src/meta_sl/load_dataset/load_omniglot.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "import warnings\n",
-    "from typing import Any, Dict\n",
+    "from typing import Any, Dict, Tuple\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from torchmeta.datasets.helpers import omniglot\n",
@@ -26,47 +26,49 @@
    },
    "outputs": [],
    "source": [
-    "def get_dataloader(config: Dict[str, Any]):\n",
+    "def get_dataloader(\n",
+    "    config: Dict[str, Any]\n",
+    ") -> Tuple[BatchMetaDataLoader, BatchMetaDataLoader, BatchMetaDataLoader]:\n",
     "    # Train 데이터셋\n",
     "    train_dataset = omniglot(\n",
-    "        folder=config.folder_name,\n",
-    "        shots=config.num_shots,\n",
+    "        folder=config[\"folder_name\"],\n",
+    "        shots=config[\"num_shots\"],\n",
     "        # test_shots=1, # default = shots\n",
-    "        ways=config.num_ways,\n",
+    "        ways=config[\"num_ways\"],\n",
     "        shuffle=True,\n",
     "        meta_train=True,\n",
-    "        download=config.download,\n",
+    "        download=config[\"download\"],\n",
     "    )\n",
     "    train_dataloader = BatchMetaDataLoader(\n",
-    "        train_dataset, batch_size=config.batch_size, shuffle=True, num_workers=1\n",
+    "        train_dataset, batch_size=config[\"batch_size\"], shuffle=True, num_workers=1\n",
     "    )\n",
     "\n",
     "    # Validation 데이터셋\n",
     "    val_dataset = omniglot(\n",
-    "        folder=config.folder_name,\n",
-    "        shots=config.num_shots,\n",
+    "        folder=config[\"folder_name\"],\n",
+    "        shots=config[\"num_shots\"],\n",
     "        # test_shots=1, # default = shots\n",
-    "        ways=config.num_ways,\n",
+    "        ways=config[\"num_ways\"],\n",
     "        shuffle=True,\n",
     "        meta_val=True,\n",
-    "        download=config.download,\n",
+    "        download=config[\"download\"],\n",
     "    )\n",
     "    val_dataloader = BatchMetaDataLoader(\n",
-    "        val_dataset, batch_size=config.batch_size, shuffle=True, num_workers=1\n",
+    "        val_dataset, batch_size=config[\"batch_size\"], shuffle=True, num_workers=1\n",
     "    )\n",
     "\n",
     "    # Test 데이터셋\n",
     "    test_dataset = omniglot(\n",
-    "        folder=config.folder_name,\n",
-    "        shots=config.num_shots,\n",
+    "        folder=config[\"folder_name\"],\n",
+    "        shots=config[\"num_shots\"],\n",
     "        # test_shots=1, # default = shots\n",
-    "        ways=config.num_ways,\n",
+    "        ways=config[\"num_ways\"],\n",
     "        shuffle=True,\n",
     "        meta_test=True,\n",
-    "        download=config.download,\n",
+    "        download=config[\"download\"],\n",
     "    )\n",
     "    test_dataloader = BatchMetaDataLoader(\n",
-    "        test_dataset, batch_size=config.batch_size, shuffle=True, num_workers=1\n",
+    "        test_dataset, batch_size=config[\"batch_size\"], shuffle=True, num_workers=1\n",
     "    )\n",
     "\n",
     "    return train_dataloader, val_dataloader, test_dataloader"
@@ -130,13 +132,13 @@
    ],
    "source": [
     "for batch_idx, batch in enumerate(train_dataloader):\n",
-    "    if batch_idx >= config.num_batches_train:\n",
+    "    if batch_idx >= config[\"num_batches_train\"]:\n",
     "        break\n",
     "\n",
-    "    support_xs = batch[\"train\"][0].to(device=config.device)\n",
-    "    support_ys = batch[\"train\"][1].to(device=config.device)\n",
-    "    query_xs = batch[\"test\"][0].to(device=config.device)\n",
-    "    query_ys = batch[\"test\"][1].to(device=config.device)\n",
+    "    support_xs = batch[\"train\"][0].to(device=config[\"device\"])\n",
+    "    support_ys = batch[\"train\"][1].to(device=config[\"device\"])\n",
+    "    query_xs = batch[\"test\"][0].to(device=config[\"device\"])\n",
+    "    query_ys = batch[\"test\"][1].to(device=config[\"device\"])\n",
     "\n",
     "    print(\n",
     "        f\"support_x shape :\",\n",
@@ -213,7 +215,7 @@
     }
    ],
    "source": [
-    "for b in range(config.batch_size):\n",
+    "for b in range(config[\"batch_size\"]):\n",
     "    fig = plt.figure(constrained_layout=True, figsize=(18, 4))\n",
     "    subfigs = fig.subfigures(1, 2, wspace=0.07)\n",
     "\n",
