--- a/src/meta_sl/load_dataset/load_sinusoid.ipynb
+++ b/src/meta_sl/load_dataset/load_sinusoid.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "import warnings\n",
-    "from typing import Any, Dict\n",
+    "from typing import Any, Dict, Tuple\n",
     "\n",
     "import torch\n",
     "from torchmeta.toy import Sinusoid\n",
@@ -26,27 +26,29 @@
    },
    "outputs": [],
    "source": [
-    "def get_dataloader(config: Dict[str, Any]):\n",
+    "def get_dataloader(\n",
+    "    config: Dict[str, Any]\n",
+    ") -> Tuple[BatchMetaDataLoader, BatchMetaDataLoader, BatchMetaDataLoader]:\n",
     "    train_dataset = Sinusoid(\n",
-    "        num_samples_per_task=config.num_shots * 2,\n",
-    "        num_tasks=config.num_batches_train * config.batch_size,\n",
+    "        num_samples_per_task=config[\"num_shots\"] * 2,\n",
+    "        num_tasks=config[\"num_batches_train\"] * config[\"batch_size\"],\n",
     "        noise_std=None,\n",
     "    )\n",
-    "    train_dataloader = BatchMetaDataLoader(train_dataset, batch_size=config.batch_size)\n",
+    "    train_dataloader = BatchMetaDataLoader(train_dataset, batch_size=config[\"batch_size\"])\n",
     "\n",
     "    val_dataset = Sinusoid(\n",
-    "        num_samples_per_task=config.num_shots * 2,\n",
-    "        num_tasks=config.num_batches_val * config.batch_size,\n",
+    "        num_samples_per_task=config[\"num_shots\"] * 2,\n",
+    "        num_tasks=config[\"num_batches_val\"] * config[\"batch_size\"],\n",
     "        noise_std=None,\n",
     "    )\n",
-    "    val_dataloader = BatchMetaDataLoader(val_dataset, batch_size=config.batch_size)\n",
+    "    val_dataloader = BatchMetaDataLoader(val_dataset, batch_size=config[\"batch_size\"])\n",
     "\n",
     "    test_dataset = Sinusoid(\n",
-    "        num_samples_per_task=config.num_shots * 2,\n",
-    "        num_tasks=config.num_batches_test * config.batch_size,\n",
+    "        num_samples_per_task=config[\"num_shots\"] * 2,\n",
+    "        num_tasks=config[\"num_batches_test\"] * config[\"batch_size\"],\n",
     "        noise_std=None,\n",
     "    )\n",
-    "    test_dataloader = BatchMetaDataLoader(test_dataset, batch_size=config.batch_size)\n",
+    "    test_dataloader = BatchMetaDataLoader(test_dataset, batch_size=config[\"batch_size\"])\n",
     "\n",
     "    return train_dataloader, val_dataloader, test_dataloader"
    ]
@@ -81,10 +83,10 @@
    "source": [
     "for batch_idx, batch in enumerate(val_dataloader):\n",
     "    xs, ys = batch\n",
-    "    support_xs = xs[:, : config.num_shots, :].to(device=config.device).type(torch.float)\n",
-    "    query_xs = xs[:, config.num_shots :, :].to(device=config.device).type(torch.float)\n",
-    "    support_ys = ys[:, : config.num_shots, :].to(device=config.device).type(torch.float)\n",
-    "    query_ys = ys[:, config.num_shots :, :].to(device=config.device).type(torch.float)\n",
+    "    support_xs = xs[:, : config[\"num_shots\"], :].to(device=config[\"device\"]).type(torch.float)\n",
+    "    query_xs = xs[:, config[\"num_shots\"] :, :].to(device=config[\"device\"]).type(torch.float)\n",
+    "    support_ys = ys[:, : config[\"num_shots\"], :].to(device=config[\"device\"]).type(torch.float)\n",
+    "    query_ys = ys[:, config[\"num_shots\"] :, :].to(device=config[\"device\"]).type(torch.float)\n",
     "\n",
     "    print(\n",
     "        f\"support_x shape :\",\n",
