--- a/src/meta_sl/metric-based/matching_network.ipynb
+++ b/src/meta_sl/metric-based/matching_network.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "import os\n",
     "import warnings\n",
-    "from typing import Any, Dict, List\n",
+    "from typing import Any, Dict, List, Tuple\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
@@ -33,44 +33,46 @@
    },
    "outputs": [],
    "source": [
-    "def get_dataloader(config: Dict[str, Any]):\n",
+    "def get_dataloader(\n",
+    "    config: Dict[str, Any]\n",
+    ") -> Tuple[BatchMetaDataLoader, BatchMetaDataLoader, BatchMetaDataLoader]:\n",
     "    train_dataset = omniglot(\n",
-    "        folder=config.folder_name,\n",
-    "        shots=config.num_shots,\n",
+    "        folder=config[\"folder_name\"],\n",
+    "        shots=config[\"num_shots\"],\n",
     "        # test_shots=1, # default = shots\n",
-    "        ways=config.num_ways,\n",
+    "        ways=config[\"num_ways\"],\n",
     "        shuffle=True,\n",
     "        meta_train=True,\n",
-    "        download=config.download,\n",
+    "        download=config[\"download\"],\n",
     "    )\n",
     "    train_dataloader = BatchMetaDataLoader(\n",
-    "        train_dataset, batch_size=config.task_batch_size, shuffle=True, num_workers=1\n",
+    "        train_dataset, batch_size=config[\"task_batch_size\"], shuffle=True, num_workers=1\n",
     "    )\n",
     "\n",
     "    val_dataset = omniglot(\n",
-    "        folder=config.folder_name,\n",
-    "        shots=config.num_shots,\n",
+    "        folder=config[\"folder_name\"],\n",
+    "        shots=config[\"num_shots\"],\n",
     "        # test_shots=1, # default = shots\n",
-    "        ways=config.num_ways,\n",
+    "        ways=config[\"num_ways\"],\n",
     "        shuffle=True,\n",
     "        meta_val=True,\n",
-    "        download=config.download,\n",
+    "        download=config[\"download\"],\n",
     "    )\n",
     "    val_dataloader = BatchMetaDataLoader(\n",
-    "        val_dataset, batch_size=config.task_batch_size, shuffle=True, num_workers=1\n",
+    "        val_dataset, batch_size=config[\"task_batch_size\"], shuffle=True, num_workers=1\n",
     "    )\n",
     "\n",
     "    test_dataset = omniglot(\n",
-    "        folder=config.folder_name,\n",
-    "        shots=config.num_shots,\n",
+    "        folder=config[\"folder_name\"],\n",
+    "        shots=config[\"num_shots\"],\n",
     "        # test_shots=1, # default = shots\n",
-    "        ways=config.num_ways,\n",
+    "        ways=config[\"num_ways\"],\n",
     "        shuffle=True,\n",
     "        meta_test=True,\n",
-    "        download=config.download,\n",
+    "        download=config[\"download\"],\n",
     "    )\n",
     "    test_dataloader = BatchMetaDataLoader(\n",
-    "        test_dataset, batch_size=config.task_batch_size, shuffle=True, num_workers=1\n",
+    "        test_dataset, batch_size=config[\"task_batch_size\"], shuffle=True, num_workers=1\n",
     "    )\n",
     "\n",
     "    return train_dataloader, val_dataloader, test_dataloader"
@@ -84,17 +86,18 @@
    },
    "outputs": [],
    "source": [
-    "def save_model(config: Dict[str, str], model, title):\n",
-    "    if not os.path.isdir(config.output_folder):\n",
-    "        os.mkdir(config.output_folder)\n",
-    "    filename = os.path.join(config.output_folder, title)\n",
+    "def save_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
+    "    if not os.path.isdir(output_folder):\n",
+    "        os.mkdir(output_folder)\n",
+    "    filename = os.path.join(output_folder, title)\n",
+    "\n",
     "    with open(filename, \"wb\") as f:\n",
     "        state_dict = model.state_dict()\n",
     "        torch.save(state_dict, f)\n",
-    "    print(\"model saved in\", filename)\n",
+    "    print(\"Model saved in\", filename)\n",
     "\n",
     "\n",
-    "def load_model(config: Dict[str, str], model, title):\n",
+    "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
     "    print(\"Load model\")\n",
     "    filename = os.path.join(config.output_folder, title)\n",
     "    model.load_state_dict(torch.load(filename))"
@@ -113,7 +116,7 @@
     "    val_accuracies: List[float],\n",
     "    train_losses: List[float],\n",
     "    val_losses: List[float],\n",
-    "):\n",
+    ") -> None:\n",
     "    fig, axs = plt.subplots(1, 2, figsize=(14, 6))\n",
     "\n",
     "    axs[0].plot(train_accuracies, label=\"train_acc\")\n",
@@ -138,7 +141,7 @@
    "outputs": [],
    "source": [
     "class MatchingNet(nn.Module):\n",
-    "    def __init__(self, in_channels: int, num_ways: int, num_shots: int):\n",
+    "    def __init__(self, in_channels: int, num_ways: int, num_shots: int) -> None:\n",
     "        super(MatchingNet, self).__init__()\n",
     "        self.in_channels = in_channels\n",
     "        self.emb_size = 64\n",
@@ -164,15 +167,15 @@
     "\n",
     "        self.lstm_cell = nn.LSTMCell(input_size=self.emb_size, hidden_size=self.emb_size)\n",
     "\n",
-    "    def convBlock(self, in_channels: int, out_channels: int, kernel_size: int, **kwargs):\n",
+    "    def convBlock(self, in_channels: int, out_channels: int, kernel_size: int) -> nn.Sequential:\n",
     "        return nn.Sequential(\n",
-    "            nn.Conv2d(in_channels, out_channels, kernel_size, padding=1, **kwargs),\n",
+    "            nn.Conv2d(in_channels, out_channels, kernel_size, padding=1),\n",
     "            nn.BatchNorm2d(out_channels, momentum=1.0, track_running_stats=False),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(2),\n",
     "        )\n",
     "\n",
-    "    def g(self, support_x):\n",
+    "    def g(self, support_x: torch.Tensor) -> torch.Tensor:\n",
     "        batch_size = support_x.shape[0]\n",
     "        support_cnn = self.cnn(support_x.flatten(start_dim=0, end_dim=1)).unflatten(\n",
     "            dim=0, sizes=[batch_size, self.num_support]\n",
@@ -181,12 +184,13 @@
     "        support_bilstm_for, support_bilstm_rev = torch.tensor_split(support_bilstm, 2, dim=-1)\n",
     "        return support_bilstm_for + support_bilstm_rev + support_cnn\n",
     "\n",
-    "    def read_out(self, hidden: torch.Tensor, support_emb):\n",
+    "    def read_out(self, hidden: torch.Tensor, support_emb: torch.Tensor) -> torch.Tensor:\n",
     "        num_query = int(hidden.shape[0] / support_emb.shape[0])\n",
     "        support_emb_repeat = support_emb.repeat(\n",
     "            num_query, 1, 1\n",
     "        )  # batch_size * num_query, num_support, emb_size\n",
     "        hidden_T = hidden.unsqueeze(-1)  # batch_size * num_query, emb_size, 1\n",
+    "\n",
     "        attention = F.softmax(\n",
     "            torch.bmm(support_emb_repeat, hidden_T)\n",
     "        )  # batch_size * num_query, num_support, 1\n",
@@ -195,22 +199,25 @@
     "        )  # batch_size * num_query, num_support, emb_size\n",
     "        return support_emb_att.sum(1)  # batch_size * num_query, emb_size\n",
     "\n",
-    "    def f(self, query_x, support_emb):\n",
+    "    def f(self, query_x: torch.Tensor, support_emb: torch.Tensor) -> torch.Tensor:\n",
     "        query_cnn = self.cnn(query_x.flatten(start_dim=0, end_dim=1))\n",
     "        hidden_state = query_cnn.new_zeros(query_cnn.shape)\n",
     "        read_out = query_cnn.new_zeros(query_cnn.shape)\n",
     "        cell_state = query_cnn.new_zeros(query_cnn.shape)\n",
+    "\n",
     "        for _ in range(10):\n",
     "            hidden_state, cell_state = self.lstm_cell(query_cnn, (hidden_state + read_out, cell_state))\n",
     "            hidden_state = hidden_state + query_cnn\n",
     "            read_out = self.read_out(hidden_state, support_emb)\n",
+    "\n",
     "        query_emb = hidden_state.unflatten(dim=0, sizes=[query_x.shape[0], query_x.shape[1]])\n",
     "        return query_emb\n",
     "\n",
-    "    def forward(self, support_x: torch.Tensor, query_x: torch.Tensor):\n",
+    "    def forward(\n",
+    "        self, support_x: torch.Tensor, query_x: torch.Tensor\n",
+    "    ) -> Tuple[torch.Tensor, torch.Tensor]:\n",
     "        support_emb = self.g(support_x)  # batch_size, num_support, emb_size\n",
     "        query_emb = self.f(query_x, support_emb)  # batch_size, num_query, emb_size\n",
-    "\n",
     "        return support_emb, query_emb"
    ]
   },
@@ -222,7 +229,9 @@
    },
    "outputs": [],
    "source": [
-    "def get_probability(support_emb, query_emb, support_y, num_ways):\n",
+    "def get_probability(\n",
+    "    support_emb: torch.Tensor, query_emb: torch.Tensor, support_y, num_ways: int\n",
+    ") -> torch.Tensor:\n",
     "    batch_size = support_emb.shape[0]\n",
     "    num_support = support_emb.shape[1]\n",
     "    num_query = query_emb.shape[1]\n",
@@ -233,6 +242,7 @@
     "    support_emb_repeat = support_emb.unsqueeze(1).repeat(\n",
     "        1, num_query, 1, 1\n",
     "    )  # batch_size, num_query, num_support, emb_size\n",
+    "\n",
     "    similarity = F.cosine_similarity(\n",
     "        support_emb_repeat, query_emb_repeat, dim=-1, eps=1e-8\n",
     "    )  # batch_size, num_query, num_support\n",
@@ -241,7 +251,6 @@
     "\n",
     "    prob = attention.new_zeros((batch_size, num_query, num_ways))\n",
     "    prob.scatter_add_(-1, indices, attention)  # batch_size, num_query, num_ways\n",
-    "\n",
     "    return prob"
    ]
   },
@@ -253,18 +262,25 @@
    },
    "outputs": [],
    "source": [
-    "def train_matching(args, task_batch, model, criterion, optimizer):\n",
+    "def train_matching(\n",
+    "    num_ways: int,\n",
+    "    device: str,\n",
+    "    task_batch: Dict[str, List[torch.Tensor]],\n",
+    "    model: nn.Module,\n",
+    "    criterion: nn.CrossEntropyLoss,\n",
+    "    optimizer: torch.optim.Adam,\n",
+    ") -> Tuple[float, float]:\n",
     "    model.train()\n",
     "\n",
-    "    support_xs = task_batch[\"train\"][0].to(device=args.device)\n",
-    "    support_ys = task_batch[\"train\"][1].to(device=args.device)\n",
-    "    query_xs = task_batch[\"test\"][0].to(device=args.device)\n",
-    "    query_ys = task_batch[\"test\"][1].to(device=args.device)\n",
+    "    support_xs = task_batch[\"train\"][0].to(device=device)\n",
+    "    support_ys = task_batch[\"train\"][1].to(device=device)\n",
+    "    query_xs = task_batch[\"test\"][0].to(device=device)\n",
+    "    query_ys = task_batch[\"test\"][1].to(device=device)\n",
     "\n",
-    "    accuracy = torch.tensor(0.0, device=args.device)\n",
+    "    accuracy = torch.tensor(0.0, device=device)\n",
     "\n",
     "    support_emb, query_emb = model(support_xs, query_xs)\n",
-    "    query_prob = get_probability(support_emb, query_emb, support_ys, args.num_ways)\n",
+    "    query_prob = get_probability(support_emb, query_emb, support_ys, num_ways)\n",
     "\n",
     "    query_prob_flat = query_prob.flatten(start_dim=0, end_dim=1)\n",
     "    query_ys_flat = query_ys.flatten()\n",
@@ -289,18 +305,24 @@
    },
    "outputs": [],
    "source": [
-    "def test_matching(args, task_batch, model, criterion, optimizer):\n",
+    "def test_matching(\n",
+    "    num_ways: int,\n",
+    "    device: str,\n",
+    "    task_batch: Dict[str, List[torch.Tensor]],\n",
+    "    model: nn.Module,\n",
+    "    criterion: nn.CrossEntropyLoss,\n",
+    ") -> Tuple[float, float]:\n",
     "    model.eval()\n",
     "\n",
-    "    support_xs = task_batch[\"train\"][0].to(device=args.device)\n",
-    "    support_ys = task_batch[\"train\"][1].to(device=args.device)\n",
-    "    query_xs = task_batch[\"test\"][0].to(device=args.device)\n",
-    "    query_ys = task_batch[\"test\"][1].to(device=args.device)\n",
+    "    support_xs = task_batch[\"train\"][0].to(device=device)\n",
+    "    support_ys = task_batch[\"train\"][1].to(device=device)\n",
+    "    query_xs = task_batch[\"test\"][0].to(device=device)\n",
+    "    query_ys = task_batch[\"test\"][1].to(device=device)\n",
     "\n",
-    "    accuracy = torch.tensor(0.0, device=args.device)\n",
+    "    accuracy = torch.tensor(0.0, device=device)\n",
     "\n",
     "    support_emb, query_emb = model(support_xs, query_xs)\n",
-    "    query_prob = get_probability(support_emb, query_emb, support_ys, args.num_ways)\n",
+    "    query_prob = get_probability(support_emb, query_emb, support_ys, num_ways)\n",
     "\n",
     "    query_prob_flat = query_prob.flatten(start_dim=0, end_dim=1)\n",
     "    query_ys_flat = query_ys.flatten()\n",
@@ -326,7 +348,7 @@
     "    \"download\": True,\n",
     "    \"num_shots\": 5,\n",
     "    \"num_ways\": 5,\n",
-    "    \"output_folder\": \"model\",\n",
+    "    \"output_folder\": \"saved_model\",\n",
     "    \"task_batch_size\": 32,  # 필수\n",
     "    \"num_task_batch_train\": 600,  # 필수\n",
     "    \"num_task_batch_test\": 200,  # 필수\n",
@@ -334,8 +356,8 @@
     "}\n",
     "\n",
     "train_dataloader, val_dataloader, test_dataloader = get_dataloader(config)\n",
-    "model = MatchingNet(in_channels=1, num_ways=config.num_ways, num_shots=config.num_shots).to(\n",
-    "    device=config.device\n",
+    "model = MatchingNet(in_channels=1, num_ways=config[\"num_ways\"], num_shots=config[\"num_shots\"]).to(\n",
+    "    device=config[\"device\"]\n",
     ")\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)"
@@ -393,16 +415,29 @@
    ],
    "source": [
     "# 메타-트레이닝\n",
-    "with tqdm(zip(train_dataloader, val_dataloader), total=config.num_task_batch_train) as pbar:\n",
+    "with tqdm(zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]) as pbar:\n",
     "    train_accuracies, val_accuracies = [], []\n",
     "    train_losses, val_losses = [], []\n",
     "\n",
     "    for task_batch_idx, (train_batch, val_batch) in enumerate(pbar):\n",
-    "        if task_batch_idx >= config.num_task_batch_train:\n",
+    "        if task_batch_idx >= config[\"num_task_batch_train\"]:\n",
     "            break\n",
     "\n",
-    "        train_accuracy, train_loss = train_matching(config, train_batch, model, criterion, optimizer)\n",
-    "        val_accuracy, val_loss = test_matching(config, val_batch, model, criterion, optimizer)\n",
+    "        train_accuracy, train_loss = train_matching(\n",
+    "            num_ways=config[\"num_ways\"],\n",
+    "            device=config[\"device\"],\n",
+    "            task_batch=train_batch,\n",
+    "            model=model,\n",
+    "            criterion=criterion,\n",
+    "            optimizer=optimizer,\n",
+    "        )\n",
+    "        val_accuracy, val_loss = test_matching(\n",
+    "            num_ways=config[\"num_ways\"],\n",
+    "            device=config[\"device\"],\n",
+    "            task_batch=val_batch,\n",
+    "            model=model,\n",
+    "            criterion=criterion,\n",
+    "        )\n",
     "\n",
     "        train_accuracies.append(train_accuracy)\n",
     "        val_accuracies.append(val_accuracy)\n",
@@ -417,7 +452,7 @@
     "        )\n",
     "\n",
     "    # 모델 저장하기\n",
-    "    save_model(config, model, \"matching_network.th\")\n",
+    "    save_model(output_folder=config[\"output_folder\"], model=model, title=\"matching_network.th\")\n",
     "\n",
     "    print_graph(train_accuracies, val_accuracies, train_losses, val_losses)"
    ]
@@ -495,15 +530,65 @@
    "hash": "1e00701f8c0a829a96ff452fb5277f0ece3f4e07662fe9989dbbafc0d5cb5571"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('rl')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
