--- a/src/meta_sl/metric-based/matching_network.ipynb
+++ b/src/meta_sl/metric-based/matching_network.ipynb
@@ -454,7 +454,12 @@
     "    # 모델 저장하기\n",
     "    save_model(output_folder=config[\"output_folder\"], model=model, title=\"matching_network.th\")\n",
     "\n",
-    "    print_graph(train_accuracies, val_accuracies, train_losses, val_losses)"
+    "    print_graph(\n",
+    "        train_accuracies=train_accuracies,\n",
+    "        val_accuracies=val_accuracies,\n",
+    "        train_losses=train_losses,\n",
+    "        val_losses=val_losses,\n",
+    "    )"
    ]
   },
   {
@@ -496,7 +501,7 @@
    ],
    "source": [
     "# 모델 불러오기\n",
-    "load_model(config, model, \"matching_network.th\")\n",
+    "load_model(output_folder=config[\"output_folder\"], model=model, title=\"matching_network.th\")\n",
     "\n",
     "# 메타-테스팅\n",
     "with tqdm(test_dataloader, total=config.num_task_batch_test) as pbar:\n",
