--- a/src/meta_sl/metric-based/prototypical_network.ipynb
+++ b/src/meta_sl/metric-based/prototypical_network.ipynb
@@ -10,6 +10,7 @@
    "source": [
     "import os\n",
     "import warnings\n",
+    "from typing import Any, Dict, List, Tuple\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
@@ -32,47 +33,49 @@
    },
    "outputs": [],
    "source": [
-    "def get_dataloader(args):\n",
+    "def get_dataloader(\n",
+    "    config: Dict[str, Any]\n",
+    ") -> Tuple[BatchMetaDataLoader, BatchMetaDataLoader, BatchMetaDataLoader]:\n",
     "    train_dataset = omniglot(\n",
-    "        args.folder,\n",
-    "        shots=args.num_shots,\n",
+    "        folder=config[\"folder_name\"],\n",
+    "        shots=config[\"num_shots\"],\n",
     "        # test_shots=1, # default = shots\n",
-    "        ways=args.num_ways,\n",
+    "        ways=config[\"num_ways\"],\n",
     "        shuffle=True,\n",
     "        meta_train=True,\n",
-    "        download=args.download,\n",
+    "        download=config[\"download\"],\n",
     "    )\n",
     "    train_dataloader = BatchMetaDataLoader(\n",
-    "        train_dataset, batch_size=args.task_batch_size, shuffle=True, num_workers=1\n",
-    "    )\n",
-    "\n",
-    "    test_dataset = omniglot(\n",
-    "        args.folder,\n",
-    "        shots=args.num_shots,\n",
-    "        # test_shots=1, # default = shots\n",
-    "        ways=args.num_ways,\n",
-    "        shuffle=True,\n",
-    "        meta_test=True,\n",
-    "        download=args.download,\n",
-    "    )\n",
-    "    test_dataloader = BatchMetaDataLoader(\n",
-    "        test_dataset, batch_size=args.task_batch_size, shuffle=True, num_workers=1\n",
+    "        train_dataset, batch_size=config[\"task_batch_size\"], shuffle=True, num_workers=1\n",
     "    )\n",
     "\n",
     "    val_dataset = omniglot(\n",
-    "        args.folder,\n",
-    "        shots=args.num_shots,\n",
+    "        folder=config[\"folder_name\"],\n",
+    "        shots=config[\"num_shots\"],\n",
     "        # test_shots=1, # default = shots\n",
-    "        ways=args.num_ways,\n",
+    "        ways=config[\"num_ways\"],\n",
     "        shuffle=True,\n",
     "        meta_val=True,\n",
-    "        download=args.download,\n",
+    "        download=config[\"download\"],\n",
     "    )\n",
     "    val_dataloader = BatchMetaDataLoader(\n",
-    "        val_dataset, batch_size=args.task_batch_size, shuffle=True, num_workers=1\n",
+    "        val_dataset, batch_size=config[\"task_batch_size\"], shuffle=True, num_workers=1\n",
     "    )\n",
     "\n",
-    "    return train_dataloader, test_dataloader, val_dataloader"
+    "    test_dataset = omniglot(\n",
+    "        folder=config[\"folder_name\"],\n",
+    "        shots=config[\"num_shots\"],\n",
+    "        # test_shots=1, # default = shots\n",
+    "        ways=config[\"num_ways\"],\n",
+    "        shuffle=True,\n",
+    "        meta_test=True,\n",
+    "        download=config[\"download\"],\n",
+    "    )\n",
+    "    test_dataloader = BatchMetaDataLoader(\n",
+    "        test_dataset, batch_size=config[\"task_batch_size\"], shuffle=True, num_workers=1\n",
+    "    )\n",
+    "\n",
+    "    return train_dataloader, val_dataloader, test_dataloader"
    ]
   },
   {
@@ -83,19 +86,20 @@
    },
    "outputs": [],
    "source": [
-    "def save_model(args, model, title):\n",
-    "    if not os.path.isdir(args.output_folder):\n",
-    "        os.mkdir(args.output_folder)\n",
-    "    filename = os.path.join(args.output_folder, title)\n",
+    "def save_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
+    "    if not os.path.isdir(output_folder):\n",
+    "        os.mkdir(output_folder)\n",
+    "    filename = os.path.join(output_folder, title)\n",
+    "\n",
     "    with open(filename, \"wb\") as f:\n",
     "        state_dict = model.state_dict()\n",
     "        torch.save(state_dict, f)\n",
-    "    print(\"model saved in\", filename)\n",
+    "    print(\"Model saved in\", filename)\n",
     "\n",
     "\n",
-    "def load_model(args, model, title):\n",
+    "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
     "    print(\"Load model\")\n",
-    "    filename = os.path.join(args.output_folder, title)\n",
+    "    filename = os.path.join(output_folder, title)\n",
     "    model.load_state_dict(torch.load(filename))"
    ]
   },
@@ -107,7 +111,12 @@
    },
    "outputs": [],
    "source": [
-    "def print_graph(train_accuracies, val_accuracies, train_losses, val_losses):\n",
+    "def print_graph(\n",
+    "    train_accuracies: List[float],\n",
+    "    val_accuracies: List[float],\n",
+    "    train_losses: List[float],\n",
+    "    val_losses: List[float],\n",
+    ") -> None:\n",
     "    fig, axs = plt.subplots(1, 2, figsize=(14, 6))\n",
     "\n",
     "    axs[0].plot(train_accuracies, label=\"train_acc\")\n",
@@ -132,7 +141,7 @@
    "outputs": [],
    "source": [
     "class PrototypicalNet(nn.Module):\n",
-    "    def __init__(self, in_channels, num_ways, num_shots):\n",
+    "    def __init__(self, in_channels: int, num_ways: int, num_shots: int) -> None:\n",
     "        super(PrototypicalNet, self).__init__()\n",
     "        self.in_channels = in_channels\n",
     "        self.emb_size = 64\n",
@@ -149,15 +158,15 @@
     "            nn.Linear(self.emb_size, self.emb_size),\n",
     "        )\n",
     "\n",
-    "    def convBlock(self, in_channels, out_channels, kernel_size, **kwargs):\n",
+    "    def convBlock(self, in_channels: int, out_channels: int, kernel_size: int) -> nn.Sequential:\n",
     "        return nn.Sequential(\n",
-    "            nn.Conv2d(in_channels, out_channels, kernel_size, padding=1, **kwargs),\n",
+    "            nn.Conv2d(in_channels, out_channels, kernel_size, padding=1),\n",
     "            nn.BatchNorm2d(out_channels, momentum=1.0, track_running_stats=False),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(2),\n",
     "        )\n",
     "\n",
-    "    def get_prototypes(self, embeddings, targets):\n",
+    "    def get_prototypes(self, embeddings: torch.Tensor, targets: torch.Tensor) -> torch.Tensor:\n",
     "        batch_size = embeddings.shape[0]\n",
     "        indices = targets.unsqueeze(-1).expand_as(embeddings)\n",
     "\n",
@@ -165,8 +174,11 @@
     "        prototypes.scatter_add_(1, indices, embeddings).div_(float(self.num_support) / self.num_ways)\n",
     "        return prototypes\n",
     "\n",
-    "    def forward(self, support_x, support_y, query_x):\n",
+    "    def forward(\n",
+    "        self, support_x: torch.Tensor, support_y: torch.Tensor, query_x: torch.Tensor\n",
+    "    ) -> torch.Tensor:\n",
     "        batch_size = support_x.shape[0]\n",
+    "\n",
     "        support_emb = self.embedding_net(support_x.flatten(start_dim=0, end_dim=1)).unflatten(\n",
     "            dim=0, sizes=[batch_size, self.num_support]\n",
     "        )\n",
@@ -174,8 +186,9 @@
     "            dim=0, sizes=[batch_size, self.num_query]\n",
     "        )\n",
     "        proto_emb = self.get_prototypes(support_emb, support_y)\n",
+    "\n",
     "        distance = torch.sum((query_emb.unsqueeze(2) - proto_emb.unsqueeze(1)) ** 2, dim=-1)\n",
-    "        return proto_emb, support_emb, query_emb, distance"
+    "        return distance"
    ]
   },
   {
@@ -186,17 +199,23 @@
    },
    "outputs": [],
    "source": [
-    "def train_proto(args, task_batch, model, criterion, optimizer):\n",
+    "def train_proto(\n",
+    "    device: str,\n",
+    "    task_batch: Dict[str, List[torch.Tensor]],\n",
+    "    model: nn.Module,\n",
+    "    criterion: nn.CrossEntropyLoss,\n",
+    "    optimizer: torch.optim.Adam,\n",
+    ") -> Tuple[float, float]:\n",
     "    model.train()\n",
     "\n",
-    "    support_xs = task_batch[\"train\"][0].to(device=args.device)\n",
-    "    support_ys = task_batch[\"train\"][1].to(device=args.device)\n",
-    "    query_xs = task_batch[\"test\"][0].to(device=args.device)\n",
-    "    query_ys = task_batch[\"test\"][1].to(device=args.device)\n",
+    "    support_xs = task_batch[\"train\"][0].to(device=device)\n",
+    "    support_ys = task_batch[\"train\"][1].to(device=device)\n",
+    "    query_xs = task_batch[\"test\"][0].to(device=device)\n",
+    "    query_ys = task_batch[\"test\"][1].to(device=device)\n",
     "\n",
-    "    accuracy = torch.tensor(0.0, device=args.device)\n",
+    "    accuracy = torch.tensor(0.0, device=device)\n",
     "\n",
-    "    proto_emb, support_emb, query_emb, distance = model(support_xs, support_ys, query_xs)\n",
+    "    distance = model(support_xs, support_ys, query_xs)\n",
     "    distance_flat = distance.flatten(start_dim=0, end_dim=1)\n",
     "    query_ys_flat = query_ys.flatten()\n",
     "    loss = criterion(-distance_flat, query_ys_flat)\n",
@@ -208,7 +227,6 @@
     "    with torch.no_grad():\n",
     "        _, query_pred = torch.min(distance, dim=-1)\n",
     "        accuracy += torch.mean(query_pred.eq(query_ys).float())\n",
-    "\n",
     "    return accuracy.item(), loss.item()"
    ]
   },
@@ -220,17 +238,22 @@
    },
    "outputs": [],
    "source": [
-    "def test_proto(args, task_batch, model, criterion, optimizer):\n",
+    "def test_proto(\n",
+    "    device: str,\n",
+    "    task_batch: Dict[str, List[torch.Tensor]],\n",
+    "    model: nn.Module,\n",
+    "    criterion: nn.CrossEntropyLoss,\n",
+    ") -> Tuple[float, float]:\n",
     "    model.eval()\n",
     "\n",
-    "    support_xs = task_batch[\"train\"][0].to(device=args.device)\n",
-    "    support_ys = task_batch[\"train\"][1].to(device=args.device)\n",
-    "    query_xs = task_batch[\"test\"][0].to(device=args.device)\n",
-    "    query_ys = task_batch[\"test\"][1].to(device=args.device)\n",
+    "    support_xs = task_batch[\"train\"][0].to(device=device)\n",
+    "    support_ys = task_batch[\"train\"][1].to(device=device)\n",
+    "    query_xs = task_batch[\"test\"][0].to(device=device)\n",
+    "    query_ys = task_batch[\"test\"][1].to(device=device)\n",
     "\n",
-    "    accuracy = torch.tensor(0.0, device=args.device)\n",
+    "    accuracy = torch.tensor(0.0, device=device)\n",
     "\n",
-    "    proto_emb, support_emb, query_emb, distance = model(support_xs, support_ys, query_xs)\n",
+    "    distance = model(support_xs, support_ys, query_xs)\n",
     "    distance_flat = distance.flatten(start_dim=0, end_dim=1)\n",
     "    query_ys_flat = query_ys.flatten()\n",
     "    loss = criterion(-distance_flat, query_ys_flat)\n",
@@ -238,20 +261,17 @@
     "    with torch.no_grad():\n",
     "        _, query_pred = torch.min(distance, dim=-1)\n",
     "        accuracy += torch.mean(query_pred.eq(query_ys).float())\n",
-    "\n",
     "    return accuracy.item(), loss.item()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "ROFm40keUuFV"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "args = {\n",
-    "    \"folder\": \"dataset\",\n",
+    "config = {\n",
+    "    \"folder_name\": \"dataset\",\n",
     "    \"download\": True,\n",
     "    \"num_shots\": 5,\n",
     "    \"num_ways\": 5,\n",
@@ -262,8 +282,12 @@
     "    \"device\": \"cuda\",  # 필수\n",
     "}\n",
     "\n",
-    "train_dataloader, test_dataloader, val_dataloader = get_dataloader(args)\n",
-    "model = PrototypicalNet(1, args.num_ways, args.num_shots).to(device=args.device)\n",
+    "train_dataloader, val_dataloader, test_dataloader = get_dataloader(config)\n",
+    "\n",
+    "model = PrototypicalNet(in_channels=1, num_ways=config[\"num_ways\"], num_shots=config[\"num_shots\"]).to(\n",
+    "    device=config[\"device\"]\n",
+    ")\n",
+    "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)"
    ]
@@ -319,19 +343,25 @@
     }
    ],
    "source": [
-    "# Training loop\n",
-    "with tqdm(zip(train_dataloader, val_dataloader), total=args.num_task_batch_train) as pbar:\n",
-    "    train_accuracies = []\n",
-    "    val_accuracies = []\n",
-    "    train_losses = []\n",
-    "    val_losses = []\n",
+    "# 메타-트레이닝\n",
+    "with tqdm(zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]) as pbar:\n",
+    "    train_accuracies, val_accuracies = [], []\n",
+    "    train_losses, val_losses = [], []\n",
     "\n",
     "    for task_batch_idx, (train_batch, val_batch) in enumerate(pbar):\n",
-    "        if task_batch_idx >= args.num_task_batch_train:\n",
+    "        if task_batch_idx >= config[\"num_task_batch_train\"]:\n",
     "            break\n",
     "\n",
-    "        train_accuracy, train_loss = train_proto(args, train_batch, model, criterion, optimizer)\n",
-    "        val_accuracy, val_loss = test_proto(args, val_batch, model, criterion, optimizer)\n",
+    "        train_accuracy, train_loss = train_proto(\n",
+    "            device=config[\"device\"],\n",
+    "            task_batch=train_batch,\n",
+    "            model=model,\n",
+    "            criterion=criterion,\n",
+    "            optimizer=optimizer,\n",
+    "        )\n",
+    "        val_accuracy, val_loss = test_proto(\n",
+    "            device=config[\"device\"], task_batch=val_batch, model=model, criterion=criterion\n",
+    "        )\n",
     "\n",
     "        train_accuracies.append(train_accuracy)\n",
     "        val_accuracies.append(val_accuracy)\n",
@@ -345,9 +375,15 @@
     "            val_loss=\"{0:.4f}\".format(val_loss),\n",
     "        )\n",
     "\n",
-    "    # save model\n",
-    "    save_model(args, model, \"prototypical_network.th\")\n",
-    "    print_graph(train_accuracies, val_accuracies, train_losses, val_losses)"
+    "    # 모델 저장하기\n",
+    "    save_model(output_folder=config[\"output_folder\"], model=model, title=\"prototypical_network.th\")\n",
+    "\n",
+    "    print_graph(\n",
+    "        train_accuracies=train_accuracies,\n",
+    "        val_accuracies=val_accuracies,\n",
+    "        train_losses=train_losses,\n",
+    "        val_losses=val_losses,\n",
+    "    )"
    ]
   },
   {
@@ -388,22 +424,24 @@
     }
    ],
    "source": [
-    "# load model\n",
-    "load_model(args, model, \"prototypical_network.th\")\n",
+    "# 모델 불러오기\n",
+    "load_model(output_folder=config[\"output_folder\"], model=model, title=\"prototypical_network.th\")\n",
     "\n",
-    "# Testing loop\n",
-    "with tqdm(test_dataloader, total=args.num_task_batch_test) as pbar:\n",
+    "# 메타-테스팅\n",
+    "with tqdm(test_dataloader, total=config[\"num_task_batch_test\"]) as pbar:\n",
     "    sum_test_accuracies = 0.0\n",
     "    sum_test_losses = 0.0\n",
     "\n",
     "    for task_batch_idx, test_batch in enumerate(pbar):\n",
-    "        if task_batch_idx >= args.num_task_batch_test:\n",
+    "        if task_batch_idx >= config[\"num_task_batch_test\"]:\n",
     "            break\n",
     "\n",
-    "        test_accuracy, test_loss = test_proto(args, test_batch, model, criterion, optimizer)\n",
-    "\n",
+    "        test_accuracy, test_loss = test_proto(\n",
+    "            device=config[\"device\"], task_batch=val_batch, model=model, criterion=criterion\n",
+    "        )\n",
     "        sum_test_accuracies += test_accuracy\n",
     "        sum_test_losses += test_loss\n",
+    "\n",
     "        pbar.set_postfix(\n",
     "            test_accuracy=\"{0:.4f}\".format(sum_test_accuracies / (task_batch_idx + 1)),\n",
     "            test_loss=\"{0:.4f}\".format(sum_test_losses / (task_batch_idx + 1)),\n",
@@ -419,12 +457,25 @@
    "name": "Prototypical_network.ipynb",
    "provenance": []
   },
+  "interpreter": {
+   "hash": "1e00701f8c0a829a96ff452fb5277f0ece3f4e07662fe9989dbbafc0d5cb5571"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 64-bit ('rl')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
