--- a/src/meta_sl/metric-based/matching_network.ipynb
+++ b/src/meta_sl/metric-based/matching_network.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
     "    print(\"Load model\")\n",
-    "    filename = os.path.join(config.output_folder, title)\n",
+    "    filename = os.path.join(output_folder, title)\n",
     "    model.load_state_dict(torch.load(filename))"
    ]
   },
@@ -293,7 +293,6 @@
     "    with torch.no_grad():\n",
     "        _, query_pred = torch.max(query_prob, dim=-1)\n",
     "        accuracy = torch.mean(query_pred.eq(query_ys).float())\n",
-    "\n",
     "    return accuracy.item(), loss.item()"
    ]
   },
@@ -331,7 +330,6 @@
     "    with torch.no_grad():\n",
     "        _, query_pred = torch.max(query_prob, dim=-1)\n",
     "        accuracy = torch.mean(query_pred.eq(query_ys).float())\n",
-    "\n",
     "    return accuracy.item(), loss.item()"
    ]
   },
@@ -356,6 +354,7 @@
     "}\n",
     "\n",
     "train_dataloader, val_dataloader, test_dataloader = get_dataloader(config)\n",
+    "\n",
     "model = MatchingNet(in_channels=1, num_ways=config[\"num_ways\"], num_shots=config[\"num_shots\"]).to(\n",
     "    device=config[\"device\"]\n",
     ")\n",
@@ -504,18 +503,24 @@
     "load_model(output_folder=config[\"output_folder\"], model=model, title=\"matching_network.th\")\n",
     "\n",
     "# 메타-테스팅\n",
-    "with tqdm(test_dataloader, total=config.num_task_batch_test) as pbar:\n",
+    "with tqdm(test_dataloader, total=config[\"num_task_batch_test\"]) as pbar:\n",
     "    sum_test_accuracies = 0.0\n",
     "    sum_test_losses = 0.0\n",
     "\n",
     "    for task_batch_idx, test_batch in enumerate(pbar):\n",
-    "        if task_batch_idx >= config.num_task_batch_test:\n",
+    "        if task_batch_idx >= config[\"num_task_batch_test\"]:\n",
     "            break\n",
     "\n",
-    "        test_accuracy, test_loss = test_matching(config, test_batch, model, criterion, optimizer)\n",
-    "\n",
+    "        test_accuracy, test_loss = test_matching(\n",
+    "            num_ways=config[\"num_ways\"],\n",
+    "            device=config[\"device\"],\n",
+    "            task_batch=val_batch,\n",
+    "            model=model,\n",
+    "            criterion=criterion,\n",
+    "        )\n",
     "        sum_test_accuracies += test_accuracy\n",
     "        sum_test_losses += test_loss\n",
+    "\n",
     "        pbar.set_postfix(\n",
     "            test_accuracy=\"{0:.4f}\".format(sum_test_accuracies / (task_batch_idx + 1)),\n",
     "            test_loss=\"{0:.4f}\".format(sum_test_losses / (task_batch_idx + 1)),\n",
